@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

package "ui" {
class VesselTypeUI{
}
}

package "controllers" {
class VesselTypeController{
+getVesselType(numberOfContainers)
+print(fileName,stringToPrint)
}
}
package utils{
class Printer{
+print(fileName,stringToPrint,path)
}
package stores{
class LaprStore{
+getTypeOfVessel(numberOfContainers)
}
}
}





VesselTypeUI ..> VesselTypeController
VesselTypeController ..> Printer
VesselTypeController ..> LaprStore
@enduml